# bsp_board_mcp

./: .gitignore  CLAUDE.md  README.md  mcp.mcu.json  mcp.template.json  pyproject.toml  setup.bat  setup.ps1
.claude/skills/datasheet_reader/: README.md  SKILL.md
.claude/skills/datasheet_reader/references/: peripheral_datasheet_guide.md  soc_trm_navigation.md  terminology_glossary.md
.claude/skills/devicetree_common/: README.md  SKILL.md
.claude/skills/devicetree_common/references/: dt-syntax-reference.md  multi-platform-pinctrl.md  overlay-guide.md  peripheral-templates.md
.claude/skills/devicetree_rk/: README.md  SKILL.md
.claude/skills/devicetree_rk/references/: display-subsystem.md  (+2 more)
.claude/skills/linux_audio/: README.md  SKILL.md
.claude/skills/linux_boot_debug/: README.md  SKILL.md
.claude/skills/linux_driver_debug/: README.md  SKILL.md
.claude/skills/linux_kernel_debug/: README.md  SKILL.md
.claude/skills/linux_low_power/: README.md  SKILL.md
.claude/skills/linux_memory_debug/: README.md  SKILL.md
.claude/skills/linux_network/: README.md  SKILL.md
.claude/skills/linux_usb/: README.md  SKILL.md
.claude/skills/perf_common/: README.md  SKILL.md
.claude/skills/perf_rk/: README.md  SKILL.md
.claude/skills/rk_camera/: README.md  SKILL.md
.claude/skills/rk_ddr/: README.md  SKILL.md
.claude/skills/rk_display/: README.md  SKILL.md
.claude/skills/rk_isp/: README.md  SKILL.md
.claude/skills/rk_mpp/: README.md  SKILL.md
.claude/skills/rk_npu/: README.md  SKILL.md
.claude/skills/rk_pmic/: README.md  SKILL.md
.claude/skills/rk_uboot/: README.md  SKILL.md
.cursor/: mcp.json.example
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  mcp-server-vs-raw-adb.md
examples/: adb-usb.env.example  adb-wifi.env.example  serial.env.example  ssh.env.example
src/linux_board_mcp/: __init__.py  __main__.py  audit.py  config.py  safety.py  server.py
src/linux_board_mcp/probes/: __init__.py  base.py  pyocd.py
src/linux_board_mcp/tools/: __init__.py  mcu.py  readonly.py  writable.py
src/linux_board_mcp/transports/: __init__.py  adb.py  base.py  serial.py  ssh.py
tests/: test_runtime.py  test_safety.py  test_serial.py
(+50 files in other folders)
