[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-board-mcp"
version = "0.1.0"
description = "MCP server that lets Claude operate an embedded Linux board over SSH or ADB"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "asyncssh>=2.18.0",
]

[project.scripts]
linux-board-mcp = "linux_board_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

# ---- uv configuration ----
# `uv sync` installs the project itself in editable mode plus the deps
# above into .venv/. No requirements.txt needed.
[tool.uv]
package = true

[dependency-groups]
dev = [
    # placeholders — extend with pytest / ruff / mypy as needed
]
