[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-board-mcp"
version = "0.1.0"
description = "MCP server that lets Claude operate an embedded Linux board over SSH or ADB"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jason" }]
dependencies = [
    "mcp>=1.2.0",
    "asyncssh>=2.18.0",
]

[project.scripts]
linux-board-mcp = "linux_board_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

# ---- uv configuration ----
# `uv sync` installs the project itself in editable mode plus the deps
# above into .venv/. No requirements.txt needed.
[tool.uv]
package = true

# Default index — Tsinghua mirror, drastically faster than upstream PyPI
# from mainland China networks (minutes vs. hours). Override at the
# command line with `--default-index https://pypi.org/simple` or via
# setup.ps1's -Mirror flag. The runtime server doesn't touch PyPI; this
# only affects `uv sync` / `uv add` / `uv lock`.
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
